--- a/.gitignore
+++ b/.gitignore
@@ -155,7 +155,7 @@ dmypy.json
 cython_debug/
 
 # PNG images from graph output of stock data.
-*.png
+Charts/*.png
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
